Update Credit Card Fraud Detection.ipynb

--- a/Credit Card Fraud Detection.ipynb
+++ b/Credit Card Fraud Detection.ipynb
@@ -720,7 +720,7 @@
    "id": "209a0f18",
    "metadata": {},
    "source": [
-    "It can be seen from the above barchat that our dataset is unbalanced, which would most probably cause our model to neglect the minority class. Due to this cause, i would use both Accuracy_score and F1 score to show the model's perfomance."
+    "It can be seen from the above barchat that our dataset is imbalanced, which would most probably cause our model to neglect the minority class. Due to this cause, i would use both Accuracy_score and F1 score to show the model's perfomance."
    ]
   },
   {
